feat: implement export
